# ModGuardian

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bot.py  config.py  pyproject.toml  requirements.txt  run.py
cogs/: README.md  events.py  filters.py  logger.py  moderation.py
data/: bad_words.json
models/: cases.py  guilds.py  infractions.py  message_logs.py  users.py
services/: case_service.py  guild_config_service.py  infraction_service.py  message_log.py  user_service.py
tests/cogs/: test_events_cog.py
utils/: README.md  bad_word_loader.py  time_utils.py
